--- a/index.html
+++ b/index.html
@@ -12,28 +12,23 @@
             <source src="pingfan.mp3" >
         </audio>
         <details>
-            <summary>XX</summary>
-            <p id="p1"></p>
+            <summary>李子奥</summary>
+            自我介绍:“我是一个大黑勾，咿呀咿呀呦”
         </details>
         <details>
             <summary>XX</summary>
-            <p id="p1"></p>
         </details>
         <details>
             <summary>XX</summary>
-            <p id="p1"></p>
         </details>
         <details>
             <summary>XX</summary>
-            <p id="p1"></p>
         </details>
         <details>
             <summary>XXX</summary>
-            <p id="p1"></p>
         </details>
         <details>
             <summary>XXX</summary>
-            1啊我身边撒大大
         </details>
     </body>
 </html>
