--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
         <h1>同学回忆录:</h1>
         <audio controls>
             <source src="pingfan.mp3" >
-        </audio>
+        </audio>  
         <details>
             <summary>李子奥</summary>
-            自我介绍:“我是一个大黑勾，咿呀咿呀呦”
+            <p>自我介绍:“我是一个大黑勾，咿呀咿呀呦”</p>
+            <p>代表音乐:</p> <audio controls><source src="xingxingdiandeng.mp3" ></audio>
+            <p>还有视频:</p>     <video controls><source src="zhuzhuxia.mp4" ></video>
         </details>
         <details>
             <summary>XX</summary>
