--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <summary>李子奥</summary>
             <p>自我介绍:“我是一个大黑勾，咿呀咿呀呦”</p>
             <p>代表音乐:</p> <audio controls><source src="xingxingdiandeng.mp3" ></audio>
-            <p>还有视频:</p>     <video controls><source src="zhuzhuxia.mp4" ></video>
+            <p>还有视频:</p> <video controls style="z-index: -9999;left: 0;top: 0;"><source src="zhuzhuxia.mp4" ></video>
         </details>
         <details>
             <summary>XX</summary>
