--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
             <summary>李子奥</summary>
             <p>自我介绍:“我是一个大黑勾，咿呀咿呀呦”</p>
             <p>代表音乐:</p> <audio controls><source src="xingxingdiandeng.mp3" ></audio>
-            <p>还有视频:</p> <video controls style="z-index: -9999;left: 0;top: 0;"><source src="zhuzhuxia.mp4" ></video>
+            <p>还有视频:</p> 
+            <div class="vid-wrap">
+                <video controls>
+                <source src="zhuzhuxia.mp4" type="video/mp4">
+                </video>
+            </div>
         </details>
         <details>
             <summary>XX</summary>
